# my_workspace

./: .clangd  .gitignore  CLAUDE.md  README.md  check_docker_env.sh  clear_containers.sh  config.sh  devcontainer.json  execute_with_source.sh  launch_docker_container.sh  modules.txt  plan.md  setup.sh  test_sdk_release.sh  use_device.md  use_device_ko.md  xpti_manual.md
.agents/skills/remote-check/: SKILL.md
.agents/skills/remote-reset/: SKILL.md
.agents/skills/remote-setup/: SKILL.md
.agents/skills/remote-ssh-docker/: SKILL.md
.agents/skills/sdk-release-info/: SKILL.md
.devcontainer/: devcontainer.json
binaries/: README.md
claude_commands/: README.md  build.md  debug-device.md  device-status.md  gh-issue.md  new-xcena-app.md  review-mu-kernel.md  run-device.md  sdk-example.md
docs/remote/: system_debugging.md
nvim/: init.lua  install.sh  keyremap.lua
nvim/lua/lsp/: lspconfig.lua
nvim/lua/plugins/: copilot.lua  init.lua
remote/: README.md  apply_legacy_cli.sh  check.sh  diag.sh  dmesg.sh  host_diag.sh  lib.sh  log.sh  reset.sh  setup.sh  ssh_docker.sh  sync.sh  upgrade_host.sh
sort/: CMakeLists.txt  build.sh  sort.ipynb  sort_with_ndarray.cpp  sort_with_ptr.cpp
sort/mu_kernel/: CMakeLists.txt  mu_sort.cpp
