cmake_minimum_required(VERSION 3.11)
project(run_sort)

set(src
    sort_with_ndarray.cpp
    sort_with_ptr.cpp
)

set(include 
    ${CMAKE_CURRENT_SOURCE_DIR}
)

set(static_libs
)

set(shared_libs
)

if (NOT XCENA_SDK_CMAKE_BUILD)
    find_package(pxl REQUIRED)
    message(STATUS "PXL library found at: ${pxl_DIR}")
    LIST(APPEND shared_libs pxl::pxl)
else()
    LIST(APPEND shared_libs pxl)
endif()

foreach(file ${src})
    get_filename_component(target ${file} NAME_WE)
    add_executable(${target} ${file})
    target_include_directories(${target} PRIVATE ${include})
    target_link_libraries(${target}
#        -Wl,--whole-archive ${static_libs} -Wl,--no-whole-archive 
        ${shared_libs}
    )
    install(TARGETS ${target}
        RUNTIME DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}
    )
endforeach()

message(STATUS "Project: ${PROJECT_NAME}")
message(STATUS "  Source: ${src}")
message(STATUS "  Include: ${include}")
message(STATUS "  Static Libs: ${static_libs}")
message(STATUS "  Shared Libs: ${shared_libs}")

# build mu
include(ExternalProject)
ExternalProject_Add(bulid_mu_${PROJECT_NAME}
    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/mu_kernel
    BUILD_ALWAYS TRUE
    CMAKE_ARGS 
        -DMU_LIB_PATH=$ENV{MU_LIB_PATH}
        -DMU_LLVM_PATH=$ENV{MU_LLVM_PATH}
        -DCMAKE_INSTALL_PREFIX=${CMAKE_CURRENT_BINARY_DIR}
)
